Add cpu time limit measurement